--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "json-pointer": "^0.6.2",
+    "jsonschema": "^1.4.1",
     "reflect-metadata": "^0.1.13",
     "typedi": "^0.10.0",
     "ws": "^8.11.0"
